# truthy

./: LICENSE  README.md  index.html  package.json  vite.config.ts
.github/: FUNDING.yml  release.yml
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/Modals/: ChangePasswordModal.tsx  ExportModal.tsx  ImportModal.tsx  MainModal.tsx
src/contexts/: App.tsx  Settings.tsx  Theme.tsx
src/pages/Home/: index.tsx
src/pages/Home/components/: Card.module.css  Card.tsx  Navbar.tsx  Progress.tsx  Sidebar.tsx
src/pages/New/: New.module.css  Search.tsx  indx.tsx
src/utils/: byte-utils.ts  entryops.ts  icons.tsx  kdbx.ts  parseOtpAuthURL.ts  random.ts
src/utils/hooks/: useTimer.tsx
src/utils/importers/: aegis.ts  index.ts
